tests/unit-fail/failing/j071b.c
_Noreturn void f(void) { }

int main(void) {
      f();
      return 0;
}
